# crawler2

./: crawler2.cabal
src/: Crawl.hs  CrawlTypes.hs  Crawler.hs  Fetch.hs  IOCrawler.hs  Identity.hs  Main.hs  Parse.hs  Scrape.hs  Url.hs
src/unused/: EitherT.hs
