name:                crawler2
version:             0.1.0.0
license:             LGPL-3
license-file:        LICENSE
author:              jahaynes
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable crawler
  main-is:             Main.hs
  build-depends:       async,
                       base,
                       bytestring,
                       case-insensitive,
                       connection,
                       http-client,
                       http-client-tls,
                       http-types,
                       mtl,
                       safe,
                       safe-exceptions,
                       time
  
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:	       -Wall -O3 -threaded

